# winterfox

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_PACKAGING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PACKAGING.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PYPI_CHECKLIST.md  README.md  TODO.md  pyproject.toml
docs/: CONFIGURATION.md  GETTING_STARTED.md  SAAS_READINESS.md
examples/: winterfox.toml
examples/market-research/: README.md  research.toml  winterfox.toml
examples/superpose/: winterfox.toml
examples/superpose2/: search_instructions.md  winterfox.toml
examples/superpose2/context/: ENGINEERING-RESEARCH.md  GTM-STRATEGY-RESEARCH.md
frontend/: FRONTEND_STORYLINE_TODO.md  REDESIGN_COMPLETE.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/CycleMonitor/: CycleHistory.tsx  EventFeed.css  EventFeed.tsx
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.tsx  StatsCards.css  StatsCards.tsx
frontend/src/components/Graph/: BubbleMapNode.tsx  GraphPage.tsx  NodeDetail.tsx  ResearchMap.tsx  TreeNode.tsx  TreeView.tsx
frontend/src/components/History/: CycleDetailSheet.tsx  CycleTable.tsx  HistoryPage.tsx
frontend/src/components/Layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/Overview/: OverviewPage.tsx
frontend/src/components/Report/: ReportPage.tsx
frontend/src/components/ui/: AgentRawOutput.tsx  MarkdownContent.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: cycleStore.ts  graphStore.ts  uiStore.ts
frontend/src/types/: api.ts
src/winterfox/: __init__.py  __main__.py  cli.py  config.py
src/winterfox/agents/: __init__.py  pool.py  protocol.py
src/winterfox/agents/adapters/: __init__.py  anthropic.py  base.py  kimi.py  openrouter.py
src/winterfox/agents/tools/: __init__.py  graph_tools.py  web_fetch.py
src/winterfox/agents/tools/search/: __init__.py  base.py  brave.py  serper.py  tavily.py
src/winterfox/export/: __init__.py  cycle_export.py  json_export.py  markdown.py
src/winterfox/graph/: models.py  operations.py  propagation.py  store.py  views.py
src/winterfox/graph/migrations/: 001_lead_llm_architecture.sql  002_project_context_documents.sql
src/winterfox/orchestrator/: __init__.py  core.py  cycle.py  lead.py  merge.py  merge_directions.py  prompts.py  report.py  research_context.py  selection.py
src/winterfox/utils/: logging.py
src/winterfox/web/: __init__.py  server.py  websocket.py
src/winterfox/web/api/: __init__.py  config.py  cycles.py  graph.py  report.py  stats.py
src/winterfox/web/models/: __init__.py  api_models.py  events.py
src/winterfox/web/services/: __init__.py  cycle_runner.py  graph_service.py
src/winterfox/web/static/: index.html
src/winterfox/web/static/assets/: index-9I59mVOS.css  index-9yBwIB2I.js  index-BGzYgB6m.css  index-BMMe9M5a.css  index-BdXGG5gr.js  index-BieXXsNU.js  index-Bpdljw42.css  index-C1Ia7L0W.js  index-CXGHIby7.js  index-D00n1ZYq.js  index-DAnreLQ3.js  index-DBKKdQpr.css  index-DUdTihy_.css  index-Do6QZhpB.css  index-HcxS4aMj.js  index-LPN_JkNI.css
tests/integration/: test_lead_cycle.py
tests/unit/test_agents/: test_openrouter_normalization.py  test_pool.py  test_protocol.py
tests/unit/test_graph/: test_basic.py  test_hypothesis_propagation.py  test_migration.py
tests/unit/test_orchestrator/: test_core.py  test_lead_llm.py  test_merge_hypothesis.py  test_report.py  test_research_context.py  test_selection_llm.py
tests/unit/test_web/: test_cycles_api.py
