[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winterfox"
version = "0.1.0"
description = "Autonomous research system with multi-agent knowledge compounding"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "siinn", email = "s_che@apple.com"}
]
keywords = ["research", "ai", "agents", "knowledge-graph", "llm", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer[all]>=0.12.0",         # CLI framework with rich support
    "pydantic>=2.7.0",            # Data validation
    "pydantic-settings>=2.2.0",   # Settings management
    "aiosqlite>=0.20.0",          # Async SQLite
    "httpx>=0.27.0",              # Async HTTP client
    "anthropic>=0.25.0",          # Claude API
    "openai>=1.30.0",             # OpenAI API
    "google-generativeai>=0.5.0", # Gemini API
    # Multi-provider search support
    "tavily-python>=0.3.0",       # Tavily search
    "brave-search-python-client>=0.4.0",  # Brave search
    "serpapi>=0.1.1",             # SerpAPI (Google, Bing, etc.)
    "beautifulsoup4>=4.12.0",     # HTML parsing for web fetch
    "readability-lxml>=0.8.0",    # Clean article extraction
    "markdownify>=0.11.0",        # HTML to markdown conversion
    "rich>=13.7.0",               # Terminal formatting
    "tenacity>=8.2.0",            # Retry logic with exponential backoff
    "tiktoken>=0.7.0",            # Token counting for OpenAI models
    "platformdirs>=4.2.0",        # Cross-platform config directories
    "tomli>=2.4.0",
    # Web dashboard dependencies
    "fastapi>=0.109.0",           # Web framework for dashboard API
    "uvicorn[standard]>=0.27.0",  # ASGI server with WebSocket support
    "websockets>=12.0",           # WebSocket protocol for real-time updates
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",                # Fast linter + formatter
    "pre-commit>=3.7.0",
]

all = [
    # Optional: all search providers
    "tavily-python>=0.3.0",
    "brave-search-python-client>=0.4.0",
    "serpapi>=0.1.1",
]

[project.scripts]
winterfox = "winterfox.cli:app"

[project.urls]
Homepage = "https://github.com/siinnche/winterfox"
Repository = "https://github.com/siinnche/winterfox"
Issues = "https://github.com/siinnche/winterfox/issues"
Changelog = "https://github.com/siinnche/winterfox/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real APIs (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]  # Allow assert in tests

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
